lab_03 | review fix
