# api.yaml
@@ -112,12 +112,6 @@ paths:
           required: true
           schema:
             type: string
-        - description: user id
-          in: query
-          name: id
-          required: true
-          schema:
-            type: integer
       requestBody:
         required: true
         content:
@@ -752,6 +746,9 @@ components:
     UserUpdate:
       type: object
       properties:
+        userId:
+          type: integer
+          example: 1
         login:
           type: string
           example: 'dashori'
@@ -771,6 +768,9 @@ components:
     Farm:
       type: object
       properties:
+        farmId:
+          type: integer
+          example: 5
         name:
           type: string
           example: 'mybee'
@@ -783,6 +783,9 @@ components:
         userLogin:
           type: string
           example: 'dashori'
+        userId:
+          type: integer
+          example: 5
         honey:
           items: 
             $ref: '#/components/schemas/Honey'
@@ -790,6 +793,9 @@ components:
     FarmPatch:
       type: object
       properties:
+        farmId:
+          type: integer
+          example: 5
         description:
           type: string
           example: 'this is my farm'
@@ -812,6 +818,9 @@ components:
     Honey:
       type: object
       properties:
+        honeyId:
+          type: integer
+          example: 5
         name:
           type: string
           example: 'wildflower'
